[tool.poetry]
name = "todofec-parser"
version = "0.1.0"
description = ""
authors = ["DataRecce"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
duckdb = "^1.1.2"
polars = "^1.12.0"
boto3 = "^1.35.60"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
